--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		</dependency>
 
 
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -78,7 +79,15 @@
 			<version>2.0.2</version>
 		</dependency>
 
-        <dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.hibernate.javax.persistence</groupId>-->
+<!--			<artifactId>hibernate-jpa-2.1-api</artifactId>-->
+<!--			<version>1.0.2.Final</version>-->
+<!--		</dependency>-->
+
+
+		<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
