--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Application
 local.server.port=8080
+server.servlet.context-path=/api/v1
 
 #database
 
@@ -11,7 +12,6 @@ de.flapdoodle.mongodb.embedded.version=4.4.1
 #logging
 logging.level.root=INFO
 
-
-server.servlet.context-path=/api/v1
+#Springdoc
 springdoc.swagger-ui.path=/swagger-ui.html
-spring.aop.auto = false
+springdoc.swagger-ui.operationsSorter=method
