Added AOP. Some clean code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ logging.level.root=INFO
 #Springdoc
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+
