--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ server.servlet.context-path=/api/v1
 spring.data.mongo.database=userapi
 spring.data.mongo.port=27017
 spring.data.mongo.host=localhost
+spring.data.mongodb.port=0
 de.flapdoodle.mongodb.embedded.version=4.4.1
 
 #logging
